# cpp-ray-tracing-algorithm

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: PreventInSourceBuilds.cmake  StandardProjectSettings.cmake
include/: CoreLogic.hpp  Sphere.hpp  Vec3.hpp
src/: CMakeLists.txt  CoreLogic.cpp  Sphere.cpp
